--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,27 @@
-.profile
-pp
-gssdg
-hdh
-dhd
+       .bash_logout
+        .bashrc
+        .git.txt
+        .gitconfig
+        .gitignore.txt
+        KursBoliwara-master.zip
+        gg/
+        windows/
+        zad 13/
+        zad 14 a/
+        zad 14 b/
+        zad 14 c/
+        zad 15/
+        zad 16/
+        zad 17/
+        zad 7/
+        zad11/
+        zad12+/
+        zad12/
+        zad14/
+        zad3/
+        zad4/
+        zad5/
+        zad6/
+        zad9/
+        zadanie1/
+        zadanie2/
